# svg-creator

./: CMakeLists.txt  Color.cpp  Color.h  IShape.cpp  IShape.h  MyCLI.cpp  MyCLI.h  MyLibrary.cpp  MyLibrary.h  Point.cpp  Point.h  README.md  SvgTemplate.cpp  SvgTemplate.h  main.cpp
ErrorClass/: MyCLIError.cpp  MyCLIError.h
Shape/: Circle.cpp  Circle.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Segment.cpp  Segment.h
